# wsd

./: .gitignore  Makefile  Makefile.am  README  config_parser.c  config_parser.h  configure.ac  empty.conf  http.c  http.h  list.h  ws.c  ws.h  wscat.8  wschild.c  wsd-dev.conf  wsd.8  wsd.c  wsd.conf  wsd.org  wstypes.c  wstypes.h
proto/: chat1.c  chat1.h  chatterbox.c  chatterbox.h  chatterbox1.c  chatterbox1.h  wsapp.h
src/: Makefile.am  chatterbox.c  chatterbox.h  common.c  common.h  config_parser.c  epolltest.c  frame.c  frame.h  hashtable.h  http.c  http.h  jen.c  jen.h  list.h  parser.c  parser.h  pp2.c  pp2.h  types.h  uri.c  uri.h  ws.c  ws.h  ws_interface.c  ws_interface.h  ws_wsd.c  ws_wsd.h  wscat.c  wschild.c  wschild.h  wsd  wsd.c  wstypes.c  wstypes.h
test/: GIVEN_valid_uri_WHEN_parsing_THEN_valid_struct.c  Makefile.am  chrome-51-sample  chrome-51-varnish-4.1.3-sample  firefox-47-sample  firefox-47-varnish-4.1.3-sample  firefox-60-varnish-6.2.0-sample  http_handler.c  parser.c  parser_test.c  safari-9.1.1-sample  safari-9.1.1-varnish-4.1.3-sample  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  uri.c
